--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.VinylsAppG21"
         tools:targetApi="31">
         <activity
+            android:name=".AlbumsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_albums"
+            android:theme="@style/Theme.VinylsAppG21.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
