--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,6 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.albums.CreateAlbumActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".ui.albums.AlbumDetailActivity"
             android:exported="false">
             <meta-data
@@ -32,9 +25,9 @@
         <activity
             android:name=".ui.artists.ArtistDetailActivity"
             android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
         </activity>
         <activity
             android:name=".AlbumsActivity"
@@ -47,8 +40,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.VinylsAppG21.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
