--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,9 @@
         <activity
             android:name=".ui.artists.ArtistDetailActivity"
             android:exported="false">
-        <meta-data
-            android:name="android.app.lib_name"
-            android:value="" />
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
         <activity
             android:name=".AlbumsActivity"
@@ -61,7 +61,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.VinylsAppG21.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
